--- a/ApolloArchery/app/src/main/res/values/strings.xml
+++ b/ApolloArchery/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_screen_label">Login</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Password</string>
+    <string name="login_button">LOGIN</string>
+    <string name="password_hint">Password</string>
+    <string name="email_hint">Email</string>
+    <string name="forgot_password_text">Forgot Password</string>
+    <string name="create_account">Create Account</string>
+    <string name="first_name_label">First Name</string>
+    <string name="last_name">Last Name</string>
 </resources>
