--- a/ApolloArchery/app/src/main/res/values/strings.xml
+++ b/ApolloArchery/app/src/main/res/values/strings.xml
@@ -20,7 +20,21 @@
     <string name="new_round">New Round</string>
     <string name="profile">Profile</string>
     <string name="arrow_counter">Arrow Counter</string>
+    <string name="image_profile">p-image</string>
     <string name="site_marks">Site Marks</string>
     <string name="_000">000</string>
     <string name="arrows_shot_today">Arrows shot today</string>
+    <string name="nothing_saved_yet">Nothing saved yet!.</string>
+    <string name="history_image">history image</string>
+    <string name="_04_14_2023">04/14/2023</string>
+    <string name="history_rule_name">history rule name</string>
+    <string name="_1437_1410">1437/1410</string>
+    <string name="round_selection_label">Round Selection</string>
+    <string name="equipment_label">Equipment</string>
+    <string name="bow">Bow</string>
+    <string name="arrow_selection_label">Arrow</string>
+    <string name="rules_selection_label">Rules</string>
+    <string name="format">Format</string>
+    <string name="round_setup_label">Round Setup</string>
+    <string name="_0_0">0/0</string>
 </resources>
