--- a/ApolloArchery/app/src/main/res/values/strings.xml
+++ b/ApolloArchery/app/src/main/res/values/strings.xml
@@ -38,6 +38,27 @@
     <string name="round_setup_label">Round Setup</string>
     <string name="_0_0">0/0</string>
     <string name="start_round_btn">START ROUND</string>
+    <string name="shooting_label_text">Shooting</string>
+    <string name="undo">UNDO</string>
+    <string name="next">Next</string>
+    <string name="continue_round">Continue Round</string>
+    <string name="six_bn">six btn</string>
+    <string name="seven_bn">seven btn</string>
+    <string name="eight_bn">eight btn</string>
+    <string name="nine_bn">nine btn</string>
+    <string name="ten_bn">ten btn</string>
+    <string name="bullseye_bn">bullseye btn</string>
+    <string name="miss_bn">miss btn</string>
+    <string name="one_bn">one btn</string>
+    <string name="two_bn">two btn</string>
+    <string name="three_bn">three btn</string>
+    <string name="five_bn">five btn</string>
+    <string name="arrows">Arrows</string>
+    <string name="end_total">E/T</string>
+    <string name="running_total">R/T</string>
+    <string name="four_bn">four bn</string>
+    <string name="archer_signature">Archer Signature</string>
+    <string name="scorer_signature">Scorer Signature</string>
 
 
 </resources>
