--- a/ApolloArchery/app/src/main/res/values/strings.xml
+++ b/ApolloArchery/app/src/main/res/values/strings.xml
@@ -70,6 +70,11 @@
     <string name="delete">delete</string>
     <string name="take_picture">take_picture</string>
     <string name="save_">save</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="email_address_">Email Address</string>
+    <string name="send">SEND</string>
+    <string name="email_reset">Email</string>
+    <string name="image_reset">reset</string>
 
 
 </resources>
